Resolve #2632 Update avatar and bubble for a better visibility

--- a/frontend/css/modules/avatar.less
+++ b/frontend/css/modules/avatar.less
@@ -3,14 +3,17 @@
 
   img {
     position: relative;
+    border-radius: 50%;
   }
 
-  i {
+  .user-status-bubble {
     position: absolute;
-    padding: 1px;
-    bottom: 0;
-    right: 0;
-    font-size: 11px;
+    bottom: -1px;
+    right: -1px;
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+    border: 2px solid white;
   }
 }
 
